Add Modal visibility features

--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,10 @@
   max-width: inherit !important;
 } */
 
+.hide {
+  display: none;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
