--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,12 @@
   background-color: #813ab7d4 !important;
   color: white !important;
 }
+.rcw-full-screen .rcw-header{
+  border-radius: 35px !important;
+}
+.rcw-sender{
+  height: 70px !important;
+}
 
 /* .rcw-client, .rcw-response{
   max-width: inherit !important;
